# rust-web-roguelike-reboot

./: Cargo.toml
data/: spawns.json
docs/: index.html  index.js  main.css
rltk/: Cargo.toml
rltk/src/: platform_specific.rs  rltk.rs
src/: NPC_ai_system.rs  bystander_ai_system.rs  camera.rs  components.rs  damage_system.rs  gamesystem.rs  gui.rs  hunger_system.rs  inventory_system.rs  lighting_system.rs  main.rs  map.rs  melee_combat_system.rs  particle_system.rs  player.rs  random_table.rs  rect.rs  spawner.rs  trigger_system.rs  visibility_system.rs
src/ai/: NPC_ai_system.rs  ai_adjacent_system.rs  ai_approach_system.rs  ai_chase_system.rs  ai_encumbrance_system.rs  ai_flee_system.rs  ai_visible_system.rs  bystander_ai_system.rs  default_move_system.rs  initiative_system.rs  mod.rs  quipping.rs
src/inventory_system/: collection_system.rs  drop_system.rs  mod.rs  remove_system.rs  use_system.rs
src/map_builders/: area_starting_points.rs  bsp_dungeon.rs  bsp_interior.rs  bsp_town.rs  cellular_automata.rs  common.rs  cull_unreachable.rs  dla.rs  door_placement.rs  drunkard_walk.rs  maze.rs  mod.rs  perlin_noise.rs  rectangle_builder.rs  room_based_spawner.rs  room_based_starting.rs  room_corner_rounding.rs  room_corridor_spawner.rs  room_corridors_bsp.rs  room_draw.rs  room_eroder.rs  room_sorter.rs  rooms_corridors_bsp.rs  rooms_corridors_dogleg.rs  rooms_corridors_nearest.rs  rooms_corridors_nearest_line.rs  simple_map.rs  voronoi.rs  voronoi_spawning.rs
src/raws/: faction_structs.rs  item_structs.rs  mob_structs.rs  mod.rs  prop_structs.rs  rawmaster.rs  (+1 more)
(+3 files in other folders)
