[package]
name = "rust-web-roguelike"
version = "0.1.0"
authors = ["Zireael07 <zi@mail.com>"]
edition = "2018"

[dependencies]
# pulling in our local copy of RLTK because we do some custom tinkering
#rltk = { path = "rltk" }

rltk = { git = "https://github.com/thebracket/rltk_rs" }

# ECS
specs = "0.15.0"
specs-derive = "0.4.0"


# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.51"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.4"
features = ["console",
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'Window',
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"